# HydRust

./: .gitignore  Cargo.toml  LICENSE  README.md
Plugins/SleepyDev/: Cargo.toml
Plugins/SleepyDev/src/: lib.rs
Plugins/file_hash/: Cargo.toml
Plugins/file_hash/src/: lib.rs
Plugins/file_info/: Cargo.toml
Plugins/file_info/src/: lib.rs
Plugins/pluginblurhash/: Cargo.toml
Plugins/pluginblurhash/src/: lib.rs
docs/: plugins.md  scrapers.md
scrapers/e6aiscraper/: Cargo.toml
scrapers/e6aiscraper/src/: lib.rs
scrapers/e6scraper/: Cargo.toml
scrapers/e6scraper/src/: lib.rs
src/: main.rs
src/scr/: cli.rs  cli_structs.rs  database.rs  download.rs  file.rs  jobs.rs  logging.rs  plugins.rs  scraper.rs  sharedtypes.rs  tasks.rs  threading.rs  time_func.rs
src/scr/db/: dbtraits.rs  helpers.rs  inmemdbnew.rs  mod.rs  sqlitedb.rs
src/scr/intcoms/: client.rs  server.rs  types.rs
src/scr/sharedtypes/: mod.rs
