[package]
name = "rusthydrus"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

libloading = "0.7.3"
reqwest = { version = "0.11.11", features = ["cookies", "gzip", "gzip","brotli", "default-tls", "cookie_store", "cookie_crate"], default-features = false }
#tokio = { version = "1", features = ["full"] }
url = "2.3.1"
http = "0.2.8"
ratelimit = "0.7.0"
async-std = { version = "1", features = ["attributes", "tokio1"] }
rusqlite = {version = "0.27.0", features=["modern_sqlite", "bundled"] }
fast_log = "1.5.25"
ahash = { version = "0.7.6", features = ["serde"] }
bytes = { default-features = false, version = "1.4.0" }
sha2 = { default-features = false, version = "0.10.6" }
futures = { features = ["executor"], default-features = false, version = "0.3.24" }
urlparse = "0.7.3"
log = {version="0.4.2" }
strum_macros = "0.25.1"
strum = { default-features = false, version = "0.25.0" }
csv = "1.2.2"
file-format = { version = "0.23.0", features = ["reader"] }
serde = {version = "1.0.171", features = ["derive"], default-features = false }
md5 = { default-features = false, version = "0.7.0" }
sha1 = { default-features = false, features=["std"],version = "0.10.5" }
json = "0.12.4"
chrono = { features = [], version = "0.4.26" }
os_pipe = "1.1.4"
anyhow = "1.0.75"
coredump = "0.1.2"
bincode = "1.3.3"
derive = "1.0.0"
cargo = "0.75.1"
clap = { version = "4.4.8", features = ["derive", "color", "cargo"] }
walkdir = "2.4.0"
rayon = "1.8.0"
jwalk = "0.8.1"
interprocess = "1.2.1"
serde_bytes = "0.11.14"

[profile.release]
opt-level = 3
lto=true
codegenunits=1
strip = false
panic = "abort"
debug = false
